--- a/src/common.blocks/card.scss
+++ b/src/common.blocks/card.scss
@@ -32,6 +32,7 @@
   &__column {
     @include mixins.flex(column);
     align-items: flex-start;
+    justify-content: space-evenly;
   }
 
   &__row {
