--- a/src/common.blocks/form.scss
+++ b/src/common.blocks/form.scss
@@ -1,66 +1,66 @@
-@use "variables" as *;
-@use "mixins";
+@use 'variables' as *;
+@use 'mixins';
 
 .form {
-  @include mixins.flex(column);
-  gap: 1.5rem;
-  border-radius: 3rem;
+	@include mixins.flex(column);
+	gap: 1.5rem;
+	border-radius: 3rem;
 
-  &__label {
-    flex-grow: 1;
-  }
+	&__label {
+		flex-grow: 1;
+	}
 
-  &__input {
-    background: transparent;
-    color: white;
-    border: $defaultBorder;
-    border-radius: 1.5rem;
-    padding: 1rem;
-    font-size: 1.4rem;
-    width: 100%;
-    box-sizing: border-box;
-    outline-color: $secondary;
+	&__input {
+		background: transparent;
+		color: white;
+		border: $defaultBorder;
+		border-radius: 1.5rem;
+		padding: 1rem;
+		font-size: 1.4rem;
+		width: 100%;
+		box-sizing: border-box;
+		outline-color: $secondary;
 
-    &:focus {
-      outline-style: solid;
-    }
+		&:focus {
+			outline-style: solid;
+		}
 
-    &:invalid {
-      border-color: $error;
-      outline-color: $error;
-    }
+		&:invalid {
+			border-color: $error;
+			outline-color: $error;
+		}
 
-    &::placeholder {
-      color: lighten($primaryLight, 23%);
-    }
-  }
+		&::placeholder {
+			color: lighten($primaryLight, 23%);
+		}
+	}
 }
 
 .form__errors {
-  display: inline-block;
-  color: #ffa5a5;
-  font-size: 24px;
-  margin-left: 15px;
-  vertical-align: middle;
+	display: inline-block;
+	color: #ffa5a5;
+	font-size: 24px;
+	margin-left: 15px;
+	vertical-align: middle;
 
-  &:empty {
-    display: none;
-  }
+	&:empty {
+		display: none;
+	}
 }
 
 .form__input_invalid {
-  border-color: #ffffff;
-  box-shadow: 0 0 3px rgba(255, 0, 0, 0.3);
+	border-color: #ffffff;
+	box-shadow: 0 0 3px rgba(255, 0, 0, 0.3);
 }
 
 @media (max-width: 480px) {
-  .modal__actions {
-    flex-direction: column;
-    align-items: stretch;
-  }
-  
-  .form__errors {
-    text-align: center;
-    order: -1;
-  }
+	.modal__actions {
+		flex-direction: column;
+		align-items: stretch;
+	}
+
+	.form__errors {
+		text-align: center;
+		order: -1;
+	}
 }
