--- a/src/common.blocks/form.scss
+++ b/src/common.blocks/form.scss
@@ -38,7 +38,7 @@
 
 .form__errors {
 	display: inline-block;
-	color: #ffa5a5;
+	color: #ffffff;
 	font-size: 24px;
 	margin-left: 15px;
 	vertical-align: middle;
